NEW tag for unmatched media

--- a/dim-web/templates/index.html
+++ b/dim-web/templates/index.html
@@ -56,6 +56,7 @@
             <a href="#" aria-label="Last Week Tonight with John Oliver, Season 10 Episode 21, December 17, 2023: Elon Musk">
               <img src="http://plex.lan/photo/:/transcode?width=240&height=360&minSize=1&upscale=1&url=%2Flibrary%2Fmetadata%2F19191%2Fthumb%2F1702970869%3FX-Plex-Token%3DTZLPRkLbLGSqnxvySqnc&X-Plex-Token=TZLPRkLbLGSqnxvySqnc" width="1000" height="1500" alt="" />
             </a>
+            <span class="new">NEW</span>
             <div class="media_metadata">
               <a href="#" title="Last Week Tonight with John Oliver">
                 Last Week Tonight with John Oliver
@@ -75,6 +76,7 @@
             <a href="#" aria-label="Good Night Oppy, 2022">
               <img src="http://plex.lan/photo/:/transcode?width=480&height=720&minSize=1&upscale=1&url=%2Flibrary%2Fmetadata%2F27113%2Fthumb%2F1702721579%3FX-Plex-Token%3DTZLPRkLbLGSqnxvySqnc&X-Plex-Token=TZLPRkLbLGSqnxvySqnc" width="1000" height="1500" loading="lazy" alt="" />
             </a>
+            <span class="new">NEW</span>
             <div class="media_metadata">
               <a href="#" title="Good Night Oppy">
                 Good Night Oppy
