--- a/dim-web/templates/play.html
+++ b/dim-web/templates/play.html
@@ -1,20 +1,13 @@
 {% extends "base.html" %}
-
 {% block title %}Dashboard - Dim{% endblock %}
-
 {% block head %}
-    <link rel="stylesheet" type="text/css" href="/static/js/controls.css">
-    <script async type="text/javascript" src="/static/js/main.js"></script>
+<script type="module" src="/static/js/dim-video-player.mjs"></script>
 {% endblock %}
 
 {% block content %}
-<!-- <a href="/">Back</a> -->
-<dim-video-player>
-  <div data-shaka-player-container>
-    <video data-shaka-player playsinline controls>
-      <!-- <source src="/media/master_withthumbs.m3u8" type="application/vnd.apple.mpegurl"> -->
-      <source src="/api/v1/stream/{{ gid }}/manifest.mpd?start_num=0&should_kill=false" type="application/dash+xml">
-    </video>
-  </div>
+<dim-video-player data-id="{{ id }}">
+    <script id="media_configurations" type="application/json">
+      {{ media_configurations|safe }}
+    </script>
 </dim-video-player>
 {% endblock %}
